Remove hard coded domains in URLs

--- a/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
+++ b/rca/project_styleguide/templates/patterns/molecules/breadcrumb/breadcrumb.html
@@ -1,6 +1,6 @@
 <ul class="breadcrumb">
     <li class="breadcrumb__item">
-        <a class="breadcrumb__item-link" href="//rca.ac.uk/schools/">
+        <a class="breadcrumb__item-link" href="/schools/">
             Degree Programmes
         </a>
     </li>
