--- a/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
+++ b/rca/project_styleguide/templates/patterns/molecules/cookie-message/cookie-message.html
@@ -1,7 +1,7 @@
 <div class="cookie" data-cookie-message>
     <div class="cookie__container bg bg--light">
         <div class="cookie__message body body--two">
-            <p>We use cookies to personalise your experience on this site and others. For more information, <a class="cookie__link" href="https://www.rca.ac.uk/contact-us/about-this-website/privacy-cookies/">visit our Privacy & Cookies page</a>.</p>
+            <p>We use cookies to personalise your experience on this site and others. For more information, <a class="cookie__link" href="/contact-us/about-this-website/privacy-cookies/">visit our Privacy & Cookies page</a>.</p>
         </div>
         <div class="cookie__action body body--two">
             <a aria-label="Close" href="#" class="link link--secondary link--close cookie__btn" data-cookie-dismiss>
