--- a/rca/project_styleguide/templates/patterns/molecules/outdated-banner/outdated-banner.html
+++ b/rca/project_styleguide/templates/patterns/molecules/outdated-banner/outdated-banner.html
@@ -5,7 +5,7 @@
     <div class="outdated-banner__modal">
         <h1 class="outdated-banner__heading heading heading--four">Update you browser</h1>
         <p class="outdated-banner__copy body body--two">
-            For the best experience, we recommend you update your browser. <a class="link link--tertiary" href="https://www.rca.ac.uk/contact-us/about-this-website/accessibility/">Visit our accessibility page</a> for a list of supported browsers. Alternatively, you can continue using your current browser by closing this message.</p>
+            For the best experience, we recommend you update your browser. <a class="link link--tertiary" href="/contact-us/about-this-website/accessibility/">Visit our accessibility page</a> for a list of supported browsers. Alternatively, you can continue using your current browser by closing this message.</p>
             <div class="outdated-banner__action body body--two">
                 <a data-outdated-banner-close aria-label="Close" class="link link--secondary link--close cookie__btn">
                     <span class="link__label">Close</span>
