Add separate entry point for programmes JS

--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -55,7 +55,7 @@
             {% include "patterns/molecules/cookie-message/cookie-message.html" %}
         </div>
 
-        <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/main.js' %}"></script>
         {% block extra_js %}{% endblock %}
     </body>
 </html>
