--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -80,3 +80,7 @@
         </div>
     </div>
 {% endblock %}
+
+{% block extra_js %}
+    <script src="{% static 'js/programmes.js' %}"></script>
+{% endblock %}
