--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -21,7 +21,7 @@
 
         <div class="page__content">
 
-            <div data-mount-programmes></div>
+            <div data-mount-programmes-explorer data-search-label="{{ page.search_placeholder_text }}"></div>
 
             <section class="section section--end bg bg--light">
                 <div class="section__content">
