Add styles for search form

--- a/rca/static_src/sass/components/_search.scss
+++ b/rca/static_src/sass/components/_search.scss
@@ -23,20 +23,38 @@
     }
 
     &__button {
+        $field-height: 46px;
+        height: $field-height;
         position: absolute;
         right: 0;
-        top: 15px;
+        padding-top: 15px;
+        cursor: pointer;
 
         &:focus {
             outline: 0;
         }
 
         @include media-query(medium) {
-            top: 18px;
+            padding-top: 18px;
         }
     }
 
     &__icon {
         fill: $color--white;
+    }
+
+    &--programmes {
+        grid-column: 1 / span 2;
+        padding-bottom: 52px;
+
+        @include media-query(medium) {
+            padding-bottom: 110px;
+        }
+
+        @include media-query(large) {
+            grid-column: 2 / span 2;
+            max-width: 460px;
+            padding-bottom: 40px;
+        }
     }
 }
