--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -83,6 +83,9 @@
 @import 'components/title-area';
 @import 'components/video-modal';
 
+@import '../javascript/programmes/components/ProgrammesResults';
+@import '../javascript/programmes/components/ProgrammeTeaser';
+
 // Layout
 @import 'layout/footer';
 @import 'layout/header';
