--- a/rca/project_styleguide/templates/patterns/molecules/outdated-banner/outdated-banner.html
+++ b/rca/project_styleguide/templates/patterns/molecules/outdated-banner/outdated-banner.html
@@ -3,7 +3,7 @@
         <svg class="outdated-banner__close-icon" width="20" height="20"><use xlink:href="#close"></use></svg>
     </a>
     <div class="outdated-banner__modal">
-        <h1 class="outdated-banner__heading heading heading--four">Update you browser</h1>
+        <div class="outdated-banner__heading heading heading--four">Update you browser</div>
         <p class="outdated-banner__copy body body--two">
             For the best experience, we recommend you update your browser. <a class="link link--tertiary" href="/contact-us/about-this-website/accessibility/">Visit our accessibility page</a> for a list of supported browsers. Alternatively, you can continue using your current browser by closing this message.</p>
             <div class="outdated-banner__action body body--two">
