--- a/rca/project_styleguide/templates/patterns/base.html
+++ b/rca/project_styleguide/templates/patterns/base.html
@@ -17,7 +17,7 @@
 
     </head>
 
-    <body class="app {% block body_class %}app--{{ page.get_verbose_name|slugify }}{% endblock %} {% block header_class %}theme-light{% endblock %}">
+    <body class="app {% block body_class %}app--{{ page.get_verbose_name|slugify }}{% endblock %} {% block header_class %}theme-light{% endblock %}" prefix="schema: https://schema.org/">
 
         {% block body_top %}{% endblock %}
 
