--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/programme_overview.html
@@ -2,9 +2,10 @@
 
     <div class="section__row programme-overview">
         <header class="section__header grid">
-            <h2 class="section__heading section__heading--primary heading heading--two">
+            <h2 class="section__heading section__heading--hidden">Overview</h2>
+            <h3 class="section__heading section__heading--primary heading heading--two">
                 {{ page.programme_description_title}}
-            </h2>
+            </h3>
         </header>
         <div class="section__content grid">
             <div class="programme-overview__key-details">
