--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -98,6 +98,10 @@
             }
         }
 
+        &--hidden {
+            @include hidden();
+        }
+
         // Tab with different heading layout
         #tab-panel-apply & {
             // sass-lint:disable-line no-ids
