--- a/rca/static_src/javascript/programmes/components/ProgrammeTeaser.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammeTeaser.scss
@@ -1,3 +1,88 @@
+@mixin teaser-separator() {
+    position: relative;
+    padding-top: 17px;
+    padding-bottom: 32px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 1px;
+        background-color: $color--grid-line-light;
+        mix-blend-mode: screen;
+    }
+}
+
 .programme-teaser {
+    $root: &;
+    @include grid-layout();
     color: inherit;
+
+    &__title {
+        @include teaser-separator();
+
+        @include media-query(medium) {
+            grid-column: 1 / span 1;
+        }
+
+        @include media-query(large) {
+            grid-column: 2 / span 1;
+        }
+    }
+
+    &__heading {
+        margin-bottom: 8px;
+    }
+
+    &__heading-inner {
+        @include underline-hover-target();
+        position: relative;
+
+        #{$root}:focus &,
+        #{$root}:hover & {
+            @include underline-hover-target-reset();
+        }
+    }
+
+    &__degree {
+        display: block;
+
+        .bg--dark & {
+            color: $color--meta-darkbg;
+        }
+
+        .bg--light & {
+            color: $color--meta-lightbg;
+        }
+    }
+
+    &__description {
+        @include teaser-separator();
+
+        @include media-query(medium) {
+            grid-column: 2 / span 1;
+        }
+
+        @include media-query(large) {
+            grid-column: 3 / span 1;
+        }
+    }
+
+    &__image-wrapper {
+        position: relative;
+        grid-column: 4 / span 2;
+    }
+
+    &__image {
+        display: none;
+        position: absolute;
+
+        @include media-query(large) {
+            #{$root}:focus &,
+            #{$root}:hover & {
+                display: block;
+            }
+        }
+    }
 }
