We will also be needing the ID

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -26,7 +26,10 @@
                     <ul class="filters filters__list">
                         {{ f.title }}
                         {% for i in f.items %}
-                            <li class="filters filters__list item">{{ i }}</li>
+                            <li class="filters filters__list item">
+                                {{ i.title }}
+                                {{ i.id }}
+                            </li>
                         {% endfor %}
                     </ul>
                 {% endfor %}
