--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammeTeaser.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammeTeaser.scss
@@ -99,15 +99,19 @@
     }
 
     &__image {
-        display: none;
+        @include z-index(above-gridlines);
         position: absolute;
         top: 0;
+        opacity: 0;
+        transition: opacity $transition;
+        pointer-events: none;
 
         @include media-query(large) {
             #{$root}:focus &,
             #{$root}:hover &,
             #{$root}:first-of-type & {
-                display: block;
+                opacity: 1;
+                pointer-events: all;
             }
         }
     }
