--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
@@ -68,7 +68,46 @@
 
     &__list {
         $teaser-image-height: 580px;
+        grid-column: 1 / span 4;
         position: relative;
         min-height: $teaser-image-height;
+
+        @include media-query(large) {
+            grid-column: 2 / span 2;
+        }
+    }
+
+    &__images {
+        display: none;
+        grid-column: 4 / span 2;
+        // Matching the contact block.
+        margin-right: -60px;
+        position: relative;
+
+        @include media-query(large) {
+            display: block;
+        }
+    }
+
+    &__images-sticky {
+        position: sticky;
+        top: 0;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    &__image {
+        @include z-index(above-gridlines);
+        grid-area: 1 / 1;
+        opacity: 0;
+        transition: opacity $transition;
+        pointer-events: none;
+
+        @include media-query(large) {
+            &--active {
+                opacity: 1;
+            }
+        }
     }
 }
