Add missing bottom notch below contact block

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -46,6 +46,13 @@
                 </div>
             </section>
 
+            {% comment %}Bottom notch below the contact block, matching programme_detail.html{% endcomment %}
+            <section class="section bg bg--dark">
+                <div class="section__notch">
+                    <div class="section__notch-fill section__notch-fill--third-col"></div>
+                </div>
+            </section>
+
         </div>
     </div>
 {% endblock %}
