--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammeTeaser.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammeTeaser.scss
@@ -1,9 +1,9 @@
 @mixin teaser-separator() {
     position: relative;
-    padding-top: 17px;
-    padding-bottom: 32px;
+    padding-top: $gutter;
+    padding-bottom: $gutter * 1.5;
 
-    &::after {
+    .programme-teaser:not(:last-child) &::after {
         content: '';
         position: absolute;
         bottom: 0;
@@ -20,9 +20,10 @@
     color: inherit;
 
     &__title {
-        @include teaser-separator();
+        grid-column: 1 / span 2;
 
         @include media-query(medium) {
+            @include teaser-separator();
             grid-column: 1 / span 1;
         }
 
@@ -32,7 +33,8 @@
     }
 
     &__heading {
-        margin-bottom: 8px;
+        margin-bottom: $gutter * 0.5;
+        padding-right: $gutter * 1.5;
     }
 
     &__heading-inner {
@@ -57,8 +59,10 @@
         }
     }
 
-    &__description {
+    &__info {
         @include teaser-separator();
+        grid-column: 1 / span 2;
+        padding-right: $gutter * 1.5;
 
         @include media-query(medium) {
             grid-column: 2 / span 1;
@@ -69,18 +73,40 @@
         }
     }
 
+    &__description {
+        margin-bottom: $gutter;
+    }
+
+    &__pathways-heading {
+        @include font-size(xxxs);
+        margin-bottom: 0;
+
+        .bg--dark & {
+            color: $color--meta-darkbg;
+        }
+
+        .bg--light & {
+            color: $color--meta-lightbg;
+        }
+    }
+
+    &__pathways-text {
+        @include font-size(xxxs);
+    }
+
     &__image-wrapper {
-        position: relative;
         grid-column: 4 / span 2;
     }
 
     &__image {
         display: none;
         position: absolute;
+        top: 0;
 
         @include media-query(large) {
             #{$root}:focus &,
-            #{$root}:hover & {
+            #{$root}:hover &,
+            #{$root}:first-of-type & {
                 display: block;
             }
         }
