--- a/rca/static_src/sass/components/_section.scss
+++ b/rca/static_src/sass/components/_section.scss
@@ -44,7 +44,6 @@
     &--stat-block {
         min-height: 100%;
         position: relative;
-        overflow: hidden;
         color: $color--white;
         background-color: $color--black-65;
 
@@ -123,6 +122,10 @@
             }
         }
 
+        &--opposite {
+            overflow: hidden;
+        }
+
         &--transparent {
             background-color: transparent;
         }
@@ -191,6 +194,10 @@
         }
 
         &--second-col {
+            #{$root}__notch--opposite & {
+                grid-column: 2 / span 1;
+            }
+
             @include media-query(large) {
                 grid-column: 1 / span 2;
 
