Add first draft categories UI

--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -85,6 +85,8 @@
 
 @import '../javascript/programmes/components/ProgrammesResults/ProgrammesResults';
 @import '../javascript/programmes/components/ProgrammesResults/ProgrammeTeaser';
+@import '../javascript/programmes/components/ProgrammesCategories/CategoriesTablist';
+@import '../javascript/programmes/components/ProgrammesCategories/CategoriesPanels';
 
 // Layout
 @import 'layout/footer';
