--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -87,6 +87,7 @@
 @import '../javascript/programmes/components/ProgrammesResults/ProgrammeTeaser';
 @import '../javascript/programmes/components/ProgrammesCategories/CategoriesTablist';
 @import '../javascript/programmes/components/ProgrammesCategories/CategoriesPanels';
+@import '../javascript/programmes/components/ProgrammesCategories/CategoryItem';
 
 // Layout
 @import 'layout/footer';
