Address PR review feedback

--- a/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
+++ b/rca/project_styleguide/templates/patterns/pages/programmes/programme_index.html
@@ -47,7 +47,7 @@
             </section>
 
             {% comment %}Bottom notch below the contact block, matching programme_detail.html{% endcomment %}
-            <section class="section bg bg--dark">
+            <section class="section bg bg--dark" aria-hidden="true">
                 <div class="section__notch">
                     <div class="section__notch-fill section__notch-fill--third-col"></div>
                 </div>
