Fix font weight of search form and search results

--- a/rca/static_src/sass/components/_search.scss
+++ b/rca/static_src/sass/components/_search.scss
@@ -30,6 +30,7 @@
         padding-top: 15px;
         padding-bottom: 15px;
         color: $color--white;
+        font-family: $font--secondary;
         cursor: pointer;
 
         &:focus {
