--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammeTeaser.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammeTeaser.scss
@@ -5,6 +5,7 @@
     padding-top: $gutter;
     padding-bottom: $gutter * 1.5;
     color: inherit;
+    font-family: $font--primary;
 
     &:not(:last-child) {
         border-bottom: 1px solid $color--grid-line-light;
