--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
@@ -38,6 +38,7 @@
         display: inline-flex;
         align-items: center;
         padding: 0;
+        font-family: $font--secondary;
         color: inherit;
 
         &[type='button'] {
