Finish implementation of category view

--- a/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
+++ b/rca/project_styleguide/templates/patterns/atoms/sprites/sprites.html
@@ -47,6 +47,11 @@
         <path stroke="#797979" d="M19.5 14.5L28 23l-8.5 8.5"></path>
     </symbol>
 
+    <symbol id="arrow-right-filled" viewBox="0 0 46 46" fill="currentColor">
+        <circle cx="23" cy="23" r="23"></circle>
+        <path d="M19.5147 14.5147L28 23L19.5147 31.4853" stroke="#ffffff"></path>
+    </symbol>
+
     <symbol id="lines" fill="none">
         <path stroke-width="2" d="M10 1h26M0 11h26"></path>
     </symbol>
