--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesPanels.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesPanels.scss
@@ -6,6 +6,10 @@
     &__panel {
         [aria-expanded='true'] {
             @include grid-layout();
+
+            @include media-query(medium) {
+                padding-top: $gutter * 2;
+            }
         }
     }
 }
