Refactor all right-column image offsets to use a variable

--- a/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesPanels.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesCategories/CategoriesPanels.scss
@@ -4,6 +4,7 @@
     position: relative;
 
     &__panel {
+        // When not expanded, the panel is hidden via the HTML hidden attribute.
         [aria-expanded='true'] {
             @include grid-layout();
 
