--- a/rca/static_src/sass/components/_contact.scss
+++ b/rca/static_src/sass/components/_contact.scss
@@ -66,7 +66,7 @@
         position: relative;
         grid-column: 4 / span 2;
         margin-top: -($gutter * 14);
-        margin-right: -($gutter * 3);
+        margin-right: $image-offset-right;
         display: none;
 
         #{$root}__image {
