--- a/rca/static_src/sass/components/_image.scss
+++ b/rca/static_src/sass/components/_image.scss
@@ -12,7 +12,7 @@
         margin-right: -$gutter;
 
         @include media-query(medium) {
-            margin-right: -($gutter * 3);
+            margin-right: $image-offset-right;
         }
 
         @include media-query(large) {
