Implement category filtering with light theme for results

--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
@@ -6,7 +6,7 @@
         padding-top: $gutter * 3;
     }
 
-    &__count {
+    &__status {
         grid-column: 1 / span 2;
         margin-bottom: $gutter * 1.5;
 
