--- a/rca/static_src/sass/components/_search.scss
+++ b/rca/static_src/sass/components/_search.scss
@@ -13,6 +13,8 @@
         background: $color--primary;
         color: $color--white;
         border: 0;
+        appearance: none;
+        border-radius: 0;
         width: 100%;
         border-bottom: 1px solid $color--white;
         padding: ($gutter / 2) ($gutter * 1.5) ($gutter / 2) ($gutter / 2);
