Fix programme teaser display with light theme

--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammeTeaser.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammeTeaser.scss
@@ -9,6 +9,10 @@
 
     &:not(:last-child) {
         border-bottom: 1px solid $color--grid-line-light;
+
+        .bg--light & {
+            border-bottom-color: $color--grid-line-dark;
+        }
     }
 
     &__title {
