--- a/rca/project_styleguide/templates/patterns/organisms/programme_tabs/fees-and-funding.html
+++ b/rca/project_styleguide/templates/patterns/organisms/programme_tabs/fees-and-funding.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="overview grid">
-            <h3 class="overview__heading heading heading--four">Scholarships</h3>
+            <h3 class="overview__heading heading heading--four">{{ programme_page_global_fields.scholarships_section_title }}</h3>
             <div class="overview__item">
                 <h4 class="overview__sub-heading heading heading--five">{{ page.scholarships_title }}</h4>
                 <p class="overview__introduction introduction">{{ page.scholarships_information }}</p>
