Add basic transitions for programmes listing navigation

--- a/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
+++ b/rca/static_src/javascript/programmes/components/ProgrammesResults/ProgrammesResults.scss
@@ -1,6 +1,7 @@
 .programmes-results {
     $root: &;
     padding-top: $gutter;
+    min-height: 60vh;
 
     @include media-query(large) {
         padding-top: $gutter * 3;
