--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -88,6 +88,7 @@
 @import '../javascript/programmes/components/ProgrammesCategories/CategoriesTablist';
 @import '../javascript/programmes/components/ProgrammesCategories/CategoriesPanels';
 @import '../javascript/programmes/components/ProgrammesCategories/CategoryItem';
+@import '../javascript/programmes/components/ProgrammesExplorer';
 
 // Layout
 @import 'layout/footer';
